[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Fonts/CustomFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/kenney_platformerpack/Spritesheets/spritesheet_alien.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/CustomFont2.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/NewGame.gd" type="Script" id=4]
[ext_resource path="res://scripts/StageSelect.gd" type="Script" id=5]
[ext_resource path="res://assets/kenney_platformerpack/PNG/Backgrounds/blue_land.png" type="Texture" id=6]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.839216 )
scale = Vector2( 1, 0.589844 )
texture = ExtResource( 6 )
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 924.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 288.0
margin_bottom = 440.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 247.0
custom_colors/font_color = Color( 0.180392, 0.164706, 0.164706, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Alien 
Alien"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 288.0
margin_bottom = 440.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="NewGame" type="LinkButton" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 288.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.67451, 0.196078, 0.196078, 1 )
custom_fonts/font = ExtResource( 3 )
text = "New Game"
script = ExtResource( 4 )
scene_to_load = "Level 1"

[node name="StageSelect" type="LinkButton" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 288.0
margin_bottom = 160.0
focus_mode = 2
custom_colors/font_color = Color( 0.67451, 0.196078, 0.196078, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Stage Select"
script = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 292.0
margin_right = 804.0
margin_bottom = 440.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 92.0
margin_right = 512.0
margin_bottom = 348.0
texture = ExtResource( 2 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/NewGame" to="HBoxContainer/VBoxContainer/VBoxContainer/NewGame" method="_on_NewGame_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/StageSelect" to="HBoxContainer/VBoxContainer/VBoxContainer/StageSelect" method="_on_StageSelect_pressed"]
