[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Fonts/CustomFont2.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/NewGame.gd" type="Script" id=2]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 275
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 275.0
margin_right = 904.0
margin_bottom = 520.0
size_flags_horizontal = 3
custom_constants/separation = 210
alignment = 1

[node name="Level1" type="LinkButton" parent="HBoxContainer"]
margin_left = 129.0
margin_right = 287.0
margin_bottom = 245.0
custom_fonts/font = ExtResource( 1 )
text = "Level 1"
script = ExtResource( 2 )
scene_to_load = "Level 1"

[node name="Level2" type="LinkButton" parent="HBoxContainer"]
margin_left = 497.0
margin_right = 655.0
margin_bottom = 245.0
focus_mode = 2
custom_fonts/font = ExtResource( 1 )
text = "Level 2"
script = ExtResource( 2 )
scene_to_load = "Level 2"

[connection signal="pressed" from="HBoxContainer/Level1" to="HBoxContainer/Level1" method="_on_Level1_pressed"]
[connection signal="pressed" from="HBoxContainer/Level2" to="HBoxContainer/Level2" method="_on_Level2_pressed"]
